tests/parser/errors/labels.ray
break :1 5

print oui

:1 {

}

print oui

:b 
